# Sudo_sign_project

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: bindings.cpp  sign.h
test/: test.py  tests.py
